Migration to Gradle 4.0 step 2: partial fix, MockMVC tests still failing, to do: CORS configuration